# formacao-jornada-de-dados

.github/workflows/: aula-06-ci.yml
01-projetos/: README.md
01-projetos/01-quiz-claude-code/: CLAUDE.md  README.md  package-lock.json  package.json  prd.md
01-projetos/01-quiz-claude-code/01-projetos/: README.md
01-projetos/01-quiz-claude-code/03-python-avancado-para-dados/aula-03/: desafio.py
01-projetos/01-quiz-claude-code/app/: globals.css  layout.tsx  page.tsx
01-projetos/01-quiz-claude-code/app/quiz/: page.tsx
01-projetos/01-quiz-claude-code/app/ranking/: page.tsx
01-projetos/01-quiz-claude-code/app/resultado/: page.tsx
01-projetos/01-quiz-claude-code/components/: AnswerFeedback.tsx  ErrorBoundary.tsx  Leaderboard.tsx  ProgressBar.tsx  QuestionCard.tsx  ScoreBoard.tsx  Timer.tsx
01-projetos/01-quiz-claude-code/data/: questions.json
01-projetos/01-quiz-claude-code/lib/: quiz.ts  scoring.ts  supabase.ts  useQuiz.ts
01-projetos/01-quiz-claude-code/types/: index.ts
01-projetos/02-workshop-estrutura/: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
01-projetos/02-workshop-estrutura/.github/workflow/: ci.yml
01-projetos/02-workshop-estrutura/.github/workflows/: ci.yml
01-projetos/02-workshop-estrutura/app/: main.py
01-projetos/02-workshop-estrutura/app/pipeline/: __init__.py  extract.py  load.py  transform.py
01-projetos/02-workshop-estrutura/data/output/: output.xlsx
01-projetos/02-workshop-estrutura/docs/: index.md
01-projetos/02-workshop-estrutura/tests/: test_pipeline.py
01-projetos/2-workshop-estrutura/: README.md
03-python-avancado-para-dados/: README.md
03-python-avancado-para-dados/aula-01/: README.md  booleanos-e-operadores.py  desafio.py  estruturas-de-decisao.py  exemplo_01.py  exemplo_02.py  variaveis-sintaxe-e-tipos-primitivos.py
03-python-avancado-para-dados/aula-02/: README.md  desafio.py  exercicios.py
03-python-avancado-para-dados/aula-03/: README.md  exercicios.py
03-python-avancado-para-dados/aula-04/: README.md  arquivos.py  exemplo.csv  exercicios.py  exercicios_funcoes.py  funcao_algoritmo.py
03-python-avancado-para-dados/aula-05/: .gitignore  README.md  pyproject.toml
03-python-avancado-para-dados/aula-05/src/: create_measurements.py  gerar_graficos.py  using_bash_and_awk.sh  using_dask.py  using_duckdb.py  using_pandas.py  using_polars.py  using_python.py  using_python_old.py
03-python-avancado-para-dados/aula-06/: .flake8  .pre-commit-config.yaml  README.md  main.py  main_2.py  pyproject.toml
python-avancado-para-dados/aula-02/: README.md  desafio.py  exercicios.py
python-avancado-para-dados/aula-03/: README.md  desafio.py  exercicios.py
