[project]
name = "02-workshop-estrutura"
version = "0.1.0"
description = "meu projeto de etl"
authors = [
    {name = "Suami Yonashiro",email = "suami.yy@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = "3.11.3"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"