[project]
name = "02-workshop-estrutura"
version = "0.1.0"
description = "meu projeto de etl"
authors = [
    {name = "Suami Yonashiro",email = "suami.yy@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = "3.11.3"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "blue (>=0.9.1,<0.10.0)",
    "pydocstyle (>=6.3.0,<7.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocstrings-python (>=2.0.4,<3.0.0)",
    "pygments (>=2.20.0,<3.0.0)",
    "mkdocs-material (>=9.7.6,<10.0.0)",
    "pymdown-extensions (>=10.21.3,<11.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]
format = "isort . && blue ."
test = "poetry run pytest -v"
run = "python3 app/main.py"
kill = "kill -9 $(lsof -t -i :8000)"