[project]
name = "aula-06"
version = "0.1.0"
description = ""
authors = [
    {name = "Suami Yonashiro",email = "suami.yy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flake8 (>=7.3.0,<8.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)"
]

[tool.isort]
profile = "black"
