[project]
name = "aula-06"
version = "0.1.0"
description = ""
authors = [
    {name = "Suami Yonashiro",email = "suami.yy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "flake8 (>=7.3.0,<8.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "bandit (>=1.9.4,<2.0.0)",
    "commitizen (>=4.16.4,<5.0.0)"
]

[tool.isort]
profile = "black"

[tool.bandit]
exclude_dirs = [".venv", "tests"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
